# Pandere

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: app.rs  cache.rs  constants.rs  data_source.rs  fixtures.rs  logs.rs  main.rs  messenger_service.rs  plugin.rs  state.rs  terminal.rs  ui.rs
app/src/app/: composer.rs  login.rs  runtime.rs  sync.rs  types.rs
app/src/state/: messages.rs  mod.rs  navigation.rs
app/src/ui/: messenger.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs  paths.rs
plugin-api/: Cargo.toml
plugin-api/src/: lib.rs
plugin-host/: Cargo.toml
plugin-host/src/: bindings.rs  component.rs  dummy.rs  engine.rs  lib.rs  runtime_host.rs
plugins/slack/: Cargo.toml
plugins/slack/src/: lib.rs
plugins/telegram/: Cargo.toml
plugins/telegram/examples/: login.rs
plugins/telegram/src/: config.rs  fetch.rs  ids.rs  lib.rs  mapping.rs
src/: main.rs
wit/: pandere.wit
