[package]
name = "pandere"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
