[package]
name = "pandere-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
crossterm = "0.29"
pandere-core = { path = "../core" }
pandere-plugin-host = { path = "../plugin-host" }
ratatui = "0.29"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
