[package]
name = "pandere-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = true, features = ["clock"] }
crossterm = "0.29"
pandere-core = { path = "../core" }
pandere-plugin-host = { path = "../plugin-host" }
pandere-plugin-slack = { path = "../plugins/slack" }
pandere-plugin-telegram = { path = "../plugins/telegram" }
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
