[package]
name = "pandere-plugin-telegram"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
grammers-client = "0.9"
grammers-mtsender = "0.9"
grammers-session = "0.9"
pandere-core = { path = "../../core" }
tokio = { version = "1.47", features = ["rt", "macros"] }
tracing = "0.1"
